# aegis

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  pyproject.toml
aegis/: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
aegis/docs/: agents.md  api.md  deployment.md
aegis/examples/: scan_examples.py
aegis/src/aegis/: __main__.py
aegis/src/aegis/agents/: semantic.py  verdict.py
aegis/src/aegis/api/: deps.py  middleware.py
aegis/src/aegis/api/routes/: scan.py  session.py
aegis/src/aegis/cli/: config.py
aegis/src/aegis/cli/commands/: scan.py  session.py
aegis/src/aegis/core/: __init__.py  config.py  security.py
aegis/src/aegis/processors/: __init__.py  image.py  pdf.py  text.py
aegis/src/aegis/queue/: __init__.py  jobs.py  worker.py
aegis/src/aegis/storage/: supabase.py  vector.py
aegis/supabase/: config.toml
aegis/supabase/migrations/: 002_enable_vector.sql
aegis/tests/: conftest.py
aegis/tests/test_agents/: __init__.py  test_semantic.py  test_verdict.py
aegis/tests/test_api/: __init__.py  test_health.py  test_scan.py  test_session.py
aegis/tests/test_processors/: __init__.py  test_html.py
src/aegis/: __init__.py  version.py
src/aegis/agents/: __init__.py  base.py  behavioral.py  crew.py  intent.py  memory_agent.py  semantic.py  structural.py  visual.py
src/aegis/api/: main.py
src/aegis/api/routes/: feedback.py  session.py
src/aegis/classifiers/: __init__.py  aegis.py  base.py  rule_based.py
src/aegis/cli/: __init__.py  main.py
src/aegis/cli/commands/: feedback.py  init.py
src/aegis/core/: cache.py  config.py  constants.py  exceptions.py  models.py  telemetry.py
src/aegis/guardrails/: __init__.py  rails.py
src/aegis/guardrails/config/: config.yml  prompts.yml
src/aegis/pipeline/: __init__.py  graph.py  nodes.py  router.py  state.py
src/aegis/processors/: html.py  pdf.py
src/aegis/queue/: webhooks.py
src/aegis/storage/: __init__.py
supabase/migrations/: 001_initial_schema.sql  003_pattern_tables.sql
tests/: __init__.py
tests/test_agents/: test_semantic.py  test_structural.py  test_verdict.py
tests/test_processors/: test_text.py
